--- a/api/app/frontend/src/app/components/challenges/challenges.component.css
+++ b/api/app/frontend/src/app/components/challenges/challenges.component.css
@@ -3,6 +3,9 @@
   height: 200px;
   object-fit: cover;
   object-position: center;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+
 }
 
 .game-header {
@@ -57,9 +60,12 @@
   padding: 10px 15px;
   margin-bottom: 8px;
   border: 1px solid #ddd;
-  border-radius: 4px;
-  background-color: #f9f9f9;
+  border-radius: 10px;
+  background-color: #FAF7F0;
+
   transition: background-color 0.3s ease;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+
 }
 
 .challenge-item:hover {
@@ -68,7 +74,7 @@
 
 .challenge-link {
   text-decoration: none;
-  color: #007bff;
+  color: var(--secondary-color);
   font-weight: 500;
 }
 
@@ -80,4 +86,38 @@
 .challenges-container p {
   color: #999;
   font-style: italic;
+}
+
+.form-container {
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  padding: 40px 80px;
+  margin-block: 40px;
+  border-radius: 10px;
+  background-color: #FAF7F0;
+}
+
+.challenges-form {
+
+}
+
+.challenges-form input {
+  font-size: 1rem;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 10px 20px;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.challenges-form button{
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  padding: 10px 20px;
+  margin: 20px 0;
+  margin-top: 30px;
+  border: none;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 10px;
 }
