--- a/api/app/frontend/src/app/components/games/games.component.css
+++ b/api/app/frontend/src/app/components/games/games.component.css
@@ -29,13 +29,15 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  color: white;
+  color: var(--primary-color);
   background-size: cover;
   background-position: center;
   border-radius: 10px;
   padding: 20px;
   transition: transform 0.3s ease, background 0.3s ease;
   aspect-ratio: 1 / 1.3;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+
 }
 
 .game-card:hover {
@@ -43,14 +45,16 @@
 }
 
 .game-card::after {
+
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.8);
   z-index: 1;
+  border-radius: 10px;
 }
 
 .game-content {
