--- a/api/app/frontend/src/app/components/navbar/navbar.component.css
+++ b/api/app/frontend/src/app/components/navbar/navbar.component.css
@@ -6,11 +6,21 @@
   font-size: 3rem;
 }
 
-.navbar h2 {
-
+.navbar a {
+  font-size: 4rem;
+  font-weight: bolder;
 }
 
 .navbar button {
   width: 100px;
   font-size: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  padding: 10px 20px;
+  margin: 20px 0;
+  margin-top: 30px;
+  border: none;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  font-weight: bold;
+  border-radius: 10px;
 }
