--- a/api/app/frontend/src/app/components/submissions/submissions.component.css
+++ b/api/app/frontend/src/app/components/submissions/submissions.component.css
@@ -28,9 +28,11 @@
   padding: 15px;
   margin-bottom: 10px;
   border: 1px solid #ddd;
-  border-radius: 4px;
-  background-color: #f9f9f9;
+  border-radius: 10px;
+  background-color: #FAF7F0;
+
   transition: background-color 0.3s ease;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 .submission-item:hover {
@@ -86,4 +88,34 @@
 .submission-form input {
   margin-bottom: 20px;
   font-size: 1rem;
+}
+
+.form-container {
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  padding: 40px 80px;
+  margin-block: 40px;
+  border-radius: 10px;
+  background-color: #FAF7F0;
+}
+
+input {
+  font-size: 1rem;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 10px 20px;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+button{
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  padding: 10px 20px;
+  margin: 20px 0;
+  margin-top: 30px;
+  border: none;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 10px;
 }
