--- a/api/app/frontend/src/styles.css
+++ b/api/app/frontend/src/styles.css
@@ -1,8 +1,13 @@
-:root {
-  /*--primary-color: #111111;*/
-  /*--secondary-color: #ef476f;*/
-  /*--accent-color: #ffd166;*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+:root {
+  --primary-color: #D8D2C2;
+  --secondary-color: #4A4947;
+  /*--accent-color: #ffd166;*/
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 
 }
 
@@ -10,7 +15,14 @@
 body {
   margin: 0;
   padding: 0;
-  /*background-color: var(--primary-color);*/
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
+
+h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 
